# ManifoldTopologies

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: ManifoldTriangleSurfaceCutting.scn  SimpleManifoldTesselatedTetraTopologicalMapping.scn  SimpleTesselatedTetraTopologicalMapping.scn  Tri2edgeManiMapping.scn  Tri2edgeMapping.scn  mamailleMani.scn
src/ManifoldTopologies/: ManifoldEdgeSetGeometryAlgorithms.cpp  ManifoldEdgeSetGeometryAlgorithms.h  ManifoldEdgeSetGeometryAlgorithms.inl  ManifoldEdgeSetTopologyContainer.cpp  ManifoldEdgeSetTopologyContainer.h  ManifoldEdgeSetTopologyModifier.cpp  ManifoldEdgeSetTopologyModifier.h  ManifoldTetrahedronSetTopologyContainer.cpp  ManifoldTetrahedronSetTopologyContainer.h  ManifoldTopologyObject_double.h  ManifoldTopologyObject_float.h  ManifoldTriangleSetGeometryAlgorithms.cpp  ManifoldTriangleSetGeometryAlgorithms.h  ManifoldTriangleSetGeometryAlgorithms.inl  ManifoldTriangleSetTopologyContainer.cpp  ManifoldTriangleSetTopologyContainer.h  ManifoldTriangleSetTopologyModifier.cpp  ManifoldTriangleSetTopologyModifier.h  initManifoldTopologies.cpp
